--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <footer>
 
         <p>
-            Site Criado por Manoel Lidio Gosalan dos Santos
+            Site Criado por Manoel Lidio Gosalan dos Santos!
         </p>
 
     </footer>
